Fix channel message overflow on mobile (#541)

--- a/src/components/chat/index.module.scss
+++ b/src/components/chat/index.module.scss
@@ -11,6 +11,11 @@
   flex-direction: row-reverse;
 }
 
+.bubbleContent {
+  min-width: 0;
+  max-width: 100%;
+}
+
 .bubbleAvatarLink {
   display: inline-flex;
   flex-shrink: 0;
